# rpsql

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: connection_options.rs  history.rs  main.rs  parse_args.rs  pgpass.rs  profile.rs  sql.rs  ui.rs
src/ui/: event.rs  event_loop.rs  mod.rs  text_input.rs  text_view.rs
tests/pgpass/: ok.pgpass
