[package]
name = "rpsql"
version = "0.1.0"
authors = ["maresc_g"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.17.2"
postgres-types = "0.1"
clap = { git = "https://github.com/clap-rs/clap/" }
dirs = "2.0"
